# pdomain-ocr-ops

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONVENTIONS.md  Makefile  README.md  pyproject.toml
.basedpyright/: baseline.json
.github/workflows/: ci.yml  release.yml
docs/: README.md
docs/conventions/: lint-deviations.md
docs/plans/: 2026-05-28-batched-ocr-dispatch.md
docs/process/: lint-deviations.md
docs/usage/: dynamic-port-bootstrap.md
pd_ocr_ops/: __init__.py
pd_ocr_ops/gpu/: __init__.py  default_stages.py  device.py  events.py  local_jobs.py  local_stage.py  modal_app.py  modal_dispatcher.py  protocols.py  shared_container_dispatcher.py  types.py
pd_ocr_ops/schemas/: emit.py
pd_ocr_ops/suite/: __init__.py  auth.py  prefs.py  register_self.py  registry.py  routes.py  sibling_spawn.py  types.py
pdomain_ocr_ops/: __init__.py
pdomain_ocr_ops/gpu/: __init__.py  default_stages.py  device.py  local_jobs.py  local_stage.py  modal_app.py  modal_dispatcher.py  protocols.py  shared_container_dispatcher.py  types.py
pdomain_ocr_ops/schemas/: __init__.py  __main__.py  emit.py
pdomain_ocr_ops/suite/: __init__.py  desktop.py  paths.py  ports.py  prefs.py  register_self.py  registry.py  routes.py  sibling_spawn.py  storage.py  types.py
pdomain_ops/: __init__.py  blob_store.py  page_aggregate.py  page_server.py
pdomain_ops/gpu/: __init__.py  default_stages.py  device.py  doctr_batch.py  local_stage.py  modal_dispatcher.py  protocols.py  shared_container_dispatcher.py  types.py
pdomain_ops/pages/: __init__.py  extensions.py  payload.py  provenance.py  records.py  summary.py
pdomain_ops/suite/: bootstrap.py  desktop.py  ports.py  register_self.py
scripts/: do-release.sh  local-check.sh  local-dev.sh  local-setup.sh  release-common.sh  update-pd-deps.sh  update-pdomain-deps.sh
tests/: test_blob_store.py  test_e2e_smoke.py  test_extension_mutation.py  test_lifecycle_integration.py  test_page_aggregate.py  test_page_server.py  test_public_surface.py  test_schemas_emit.py  test_sentinel.py
tests/gpu/: test_default_stages.py  test_doctr_batch.py  test_events.py  test_jobs_db_schema.py  test_local_batch_dispatcher.py  test_local_long_job_runner_cancel.py  test_local_long_job_runner_event_parsing.py  test_local_long_job_runner_smoke.py  test_local_long_job_runner_status.py  test_local_long_job_runner_stream.py  test_local_long_job_runner_submit.py  test_local_stage_dispatcher.py  test_local_stage_register.py  test_long_job_runner_protocol.py  test_modal_app_import.py  test_modal_dispatcher.py  test_pick_device.py  test_pick_doctr_batch_sizes.py  test_remote_batch_stubs.py  test_shared_container_dispatcher.py  test_stage_dispatcher_protocol.py  test_types.py
tests/pages/: test_extensions.py  test_payload.py  test_provenance.py  test_records.py  test_summary.py  test_surface.py
tests/suite/: test_auth.py  test_desktop.py  test_local_file_prefs_read.py  test_local_file_prefs_write.py  test_local_spawn_launcher_already_running.py  test_local_spawn_launcher_env.py  test_local_spawn_launcher_spawn.py  test_local_toml_registry_read.py  test_local_toml_registry_write.py  test_mount_routes_signature.py  test_paths.py  test_ports.py  test_prefs_protocol.py  test_register_self.py  test_registry_protocol.py  test_routes_healthz.py  test_routes_icons.py  test_routes_installed.py  test_routes_launch.py  test_routes_prefs_app.py  test_routes_prefs_common.py  test_sibling_launch_protocol.py  test_storage.py  test_types_installed_app.py  test_types_suite_adapters.py  test_types_suite_app.py  test_types_ui_prefs.py
