[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pd-ocr-ops"
version = "0.1.0"
description = "Suite plumbing and GPU dispatch adapters for the pd-* OCR suite"
authors = [
    { name = "CT", email = "concavetrillion@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "filelock>=3.13",
    "httpx>=0.27",
    "platformdirs>=4.2",
    "pydantic>=2.5",
    "tomli>=2.0",
    "tomli-w>=1.0",
    "uvicorn>=0.30",
]

[project.scripts]
pd-ocr-ops-schemas = "pd_ocr_ops.schemas.emit:main"

[project.urls]
Homepage = "https://github.com/ConcaveTrillion/pd-ocr-ops"
Source = "https://github.com/ConcaveTrillion/pd-ocr-ops"

[tool.hatch.build.targets.wheel]
packages = ["pd_ocr_ops"]

[tool.uv.sources]

[dependency-groups]
dev = [
    "basedpyright>=1.39.4",
    "gitlint>=0.19.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-xdist>=3.8.0",
    "ruff>=0.7",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.basedpyright]
include = ["pd_ocr_ops", "tests", "scripts"]
exclude = ["**/__pycache__", "**/.venv", "**/node_modules"]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[[tool.basedpyright.executionEnvironments]]
root = "tests"

[[tool.basedpyright.executionEnvironments]]
root = "scripts"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"
