[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdomain-ocr-ops"
version = "0.2.3"
description = "Suite plumbing and GPU dispatch adapters for the pd-* OCR suite"
authors = [
    { name = "CT", email = "concavetrillion@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "filelock>=3.13",
    "httpx>=0.27",
    "pdomain-book-tools>=0.14.1",
    "platformdirs>=4.2",
    "pydantic>=2.5",
    "tomli>=2.0",
    "tomli-w>=1.0",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
modal = ["modal>=0.66"]

[project.scripts]
pdomain-ocr-ops-schemas = "pdomain_ocr_ops.schemas.emit:main"

[project.urls]
Homepage = "https://github.com/pdomain/pdomain-ocr-ops"
Source = "https://github.com/pdomain/pdomain-ocr-ops"

[tool.hatch.build.targets.wheel]
packages = ["pdomain_ocr_ops"]

[[tool.uv.index]]
name = "pdomain-index-pip"
url = "https://pdomain.github.io/pdomain-index-pip/simple/"
explicit = true

[tool.uv.sources]
pdomain-book-tools = { index = "pdomain-index-pip" }

[dependency-groups]
dev = [
    "basedpyright>=1.39.4",
    "gitlint>=0.19.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.13",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    # Current baseline
    "E", "W",       # pycodestyle errors/warnings
    "F",            # pyflakes
    "I",            # isort (replaces standalone isort)
    "N",            # pep8-naming
    "B",            # flake8-bugbear — mutable defaults, broad excepts, etc.
    "SIM",          # flake8-simplify
    "UP",           # pyupgrade
    "RUF",          # ruff-specific rules
    "ERA",          # eradicate — commented-out code
    "T20",          # flake8-print
    # Added per 2026-05-17 strict-linting decisions
    "ANN",          # flake8-annotations — force type hints on all sigs
    "S",            # flake8-bandit — security rules
    "C4",           # flake8-comprehensions
    "PERF",         # perflint — performance anti-patterns
    "TC",           # flake8-type-checking — move type-only imports to TYPE_CHECKING
    "TID",          # flake8-tidy-imports
    "PT",           # flake8-pytest-style
    "RET",          # flake8-return
    "PL",           # pylint subset (PLC + PLE + PLR + PLW)
    "D",            # pydocstyle
    # Added per 2026-05-17 guidelines audit (BLE/TRY/LOG/G)
    "BLE",          # flake8-blind-except
    "TRY",          # tryceratops — TRY400 enforces log.exception over log.error in except
    "LOG",          # flake8-logging — proper log.* usage
    "G",            # flake8-logging-format — lazy formatting in log calls
]
ignore = [
    # Line length: many long docstrings, error messages, and URLs; enforcing
    # 88-char wrapping everywhere adds noise without improving readability.
    "E501",
    # Docstring style: D203 (1-blank-before-class-docstring) conflicts with
    # D211 (no-blank-before-class-docstring); D212 (multi-line-summary-first-line)
    # conflicts with D213 (multi-line-summary-second-line). Pick one of each pair.
    "D203",
    "D212",
    # Missing docstrings on public modules/packages/magic-methods: large
    # existing codebase; add incrementally, not in a single lint sweep.
    "D100",
    "D104",
    "D107",
    # ANN101/ANN102 (self/cls annotations) were removed from ruff >= 0.2;
    # listed here for documentation only — ruff emits a warning if present
    # in the ignore list. Remove if ruff starts hard-failing on unknown rules.
    # PLR0913 (too-many-arguments): OCR/pipeline functions legitimately need many
    # params; enforcing here would require invasive config-object refactors.
    "PLR0913",
    # PLR2004 (magic-value-comparison): common in threshold/port/timeout code.
    "PLR2004",
    # TRY003 (long-message-outside-exception-class): too noisy for a library
    # that uses f-string error messages everywhere.
    "TRY003",
    # COM812 (missing-trailing-comma): conflicts with ruff formatter auto-style.
    "COM812",
    # PLC0415 (import-not-at-top-level): deferred imports are a legitimate
    # pattern — used to break circular deps and avoid loading optional-heavy
    # modules until needed. Suppressing globally.
    "PLC0415",
    # PLR complexity rules: pipeline functions legitimately have high
    # branch/return counts; enforcing these would require invasive refactors.
    "PLR0912",  # too-many-branches
    "PLR0911",  # too-many-return-statements
    "PLR0915",  # too-many-statements
    # ANN401 (dynamically-typed-expressions): some functions legitimately
    # accept/return Any (e.g. JSON deserialisers, generic dispatch helpers).
    "ANN401",
    # D205 (1-blank-line-required-between-summary-and-description): enforcing
    # this across the entire docstring backlog is too noisy for one commit.
    "D205",
    # D105 (missing-docstring-in-magic-method): __repr__, __eq__, etc. are
    # self-documenting; require incrementally on new code only.
    "D105",
    # B008 (function-call-in-default-argument): FastAPI Depends() and Pydantic
    # field() use this pattern legitimately in all route definitions.
    "B008",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["pdomain_ocr_ops"]

[tool.ruff.lint.per-file-ignores]
# Tests: assert is the idiom (S101); magic numbers common (PLR2004); no
# annotations required (ANN); no docstrings required (D); security rules
# relaxed (S105/S106/S311 — hardcoded passwords/random are test fixtures);
# pytest.raises match= not required for every test (PT011);
# /tmp paths are fine in tests (S108); trivial comparisons can be intentional (PLR0133);
# loop-var reassignment as pattern (PLW2901); list-building loops in tests are fine (PERF401);
# BLE001: concurrency stress tests collect thread errors via broad except;
# PLW1510: subprocess.run check= omitted intentionally (returncode asserted explicitly);
# SIM117: nested with blocks are clearer for pytest.raises + context combos.
"tests/**/*.py" = ["S101", "S105", "S106", "S311", "T201", "ANN", "D", "PLR2004", "PT011", "S108", "PLR0133", "PLW2901", "PERF401", "BLE001", "PLW1510", "SIM117"]
# Scripts: print() is the output mechanism; no docstrings required; S607 partial
# executable path is idiomatic when invoking system tools (uv, git, etc.)
"scripts/*.py" = ["T201", "D", "S607"]
# __init__.py: re-exports without docstrings; F401 used for public API surface.
"**/__init__.py" = ["D104", "F401", "TC"]
# Private modules: internal convention, no docstrings required.
"**/_*.py" = ["D"]
# GPU device detection: optional-dep probes must catch all exceptions to
# handle any error cupy/torch may raise (ImportError, RuntimeError, etc.).
"pdomain_ocr_ops/gpu/device.py" = ["BLE001"]
# SQLite job runner: subprocess.Popen is the mechanism; RUF006 fire-and-forget
# create_task is intentional supervision pattern; BLE001 supervisor catch-all.
"pdomain_ocr_ops/gpu/local_jobs.py" = ["BLE001", "S603", "RUF006"]
# Prefs file reader: JSON parse failure treated as empty/default (resilience).
"pdomain_ocr_ops/suite/prefs.py" = ["BLE001"]
# Registry file reader: TOML parse failure treated as empty registry (resilience).
# TRY300: try/except structure is the intended read-or-default pattern.
# S112: try/except/continue to skip stale/corrupt entries is intentional.
"pdomain_ocr_ops/suite/registry.py" = ["BLE001", "TRY300", "S112"]
# Sibling launcher: subprocess.Popen for app spawning; BLE001 health-poll
# catch-all (httpx + asyncio can raise many exception types); S110 is
# intentional poll-until-healthy loop.
"pdomain_ocr_ops/suite/sibling_spawn.py" = ["BLE001", "S603", "S110"]

[tool.basedpyright]
include = ["pdomain_ocr_ops", "tests", "scripts"]
exclude = ["**/__pycache__", "**/.venv", "**/node_modules"]

# "recommended" is the workspace-canonical strict mode per 2026-05-17 decisions.
# Catches unannotated functions, inferred-Any propagation, untyped decorators,
# and missing return types that "standard" mode skips.
typeCheckingMode = "recommended"
# Warnings are baselined via .basedpyright/baseline.json — new warnings will
# fail CI; existing ones are frozen until fixed incrementally.
failOnWarnings = true

# Import cycles are structural and resolved via TYPE_CHECKING guards.
# Actual import order issues surface as runtime ImportErrors.
reportImportCycles = "none"

# Tell basedpyright where the venv is so it finds third-party stubs.
venvPath = "."
venv = ".venv"

# Per-execution-environment overrides: tests and scripts get more leniency.
[[tool.basedpyright.executionEnvironments]]
root = "tests"

[[tool.basedpyright.executionEnvironments]]
root = "scripts"

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=pdomain_ocr_ops",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    # ResourceWarning from subprocess.Popen stdout/stderr PIPE left open
    # until GC in LocalLongJobRunner._supervise — pipes are read once then
    # orphaned by design; closing in finally would race with caller reads.
    "ignore::ResourceWarning",
]
